fixed signup form text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ a:hover {
 	padding: 10px;
 	border: 0;
 	border-radius: 0;
+	text-align: center;
 } 
 
 .indicates-required {
